# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./achievements";
 export * from "./settings";
 export * from "./game_types";
 export * from "./practice_sessions";
+export * from "./team-matches";
